@@ -20,6 +20,8 @@
 * Added stats for testing on a Netra 240.
 * Added stats for testing with 4 web daemons on a Netra.
 * Added more stats as well as images for select stats.
+* Added the control protocol classes from Apple (Calendar Server) by David
+Reid.
 
 2008.06.21 oubiwann
 
